Fix spacing issue that was caused by the cursor which was hidden by CSS instead of the proper JS way

--- a/style.scss
+++ b/style.scss
@@ -18,11 +18,6 @@ body {
   padding: 20px;
   margin-top: -100vh;
 
-  .typed-cursor {
-    opacity: 0;
-  }
-
-
   .animatedDeveloper {
     font-family: 'Courier', monospace;
     text-shadow: 1px 1px #000000;
